Prevented zoom and scroll on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
     color: var(--text-color);
 }
 
+html,
+body {
+    overflow: hidden;
+}
+
 body {
     display: flex;
     flex-direction: column;
